--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Personal CRM</title>
+    <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
